--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -199,41 +199,16 @@ header h1 {
 }
 
 
-footer {
-	position: absolute;
-    background-color: #352b23;
+.footer {
+	width: 980px;
+    background-color:#dcdcdc;
     text-align: center;
-    clear: both;
-    overflow: auto;
+    margin-top: 20px;
 }
 
-#footer_navi ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-footer {
-    background-color: #27354b;
-    text-align: center;
-}
-
-footer #footer_navi {
-    background-color: #254f51;
-    padding: 5px 0;
-}
-
-footer #footer_navi li {
-    display: inline;
-    border-left: solid 1px #537745;
-    margin-left: 8px;
-    padding-left: 8px;
-    font-size: smaller;
-}
-
-footer small {
-    display: block;
+.footer p {
     padding: 4px 0;
+    text-align: center;
     color: #fff;
 }
 
