--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -95,6 +95,8 @@ header h1 {
     background-color: #87ceeb;
 }
 
+
+/*共通のCSS*/
 #contents {
     width: 980px;
     margin: 10px auto;
@@ -144,9 +146,9 @@ header h1 {
     text-align: center;
 }
 
-#element p {
-    text-align: center;
-}
+/*#element p {*/
+/*    text-align: center;*/
+/*}*/
 
 
 #side {
@@ -192,13 +194,6 @@ header h1 {
     text-decoration: none;
 }
 
-.login_button:hover{
-    background: #77bac1;
-    background: linear-gradient(to bottom,  #77bac1 0%,#87cdcd 100%);
-    color: #254f51;
-}
-
-
 .footer {
 	width: 980px;
     background-color:#dcdcdc;
@@ -212,9 +207,89 @@ header h1 {
     color: #fff;
 }
 
-.studentinfomation {
-    border-collapse: separate;  /* 表の線と線の間を空ける */
-    border-spacing: 20px;       /* 表の線と線の間の幅 */
+/*学生一覧用のCSS*/
+/*学生一覧テーブル用(studentinfomation.jsp)*/
+.function_title {
+	 background: #dcdcdc;
+	 color:#000;
+	 padding: 10px 0 10px 10px;
+}
+.registration_link {
+	float: right;
+	margin-right: 25px;
+}
+
+.studentform {
+	width: 938px;
+	margin:0 auto 10px;
+	padding: 20px 5px 20px;
+	text-align: center;
+	border: solid 1px; 
+	border-radius: 10px;
+	clear: both;
+}
+
+.studentform_elements {
+	display: inline-block;
+	width: 300px;
+	height: 60px;
+	margin: 0 5px;
+}
+.studentform_elements label {
+	float: left;
+	margin-left: 10px;
+}
+.studentform_elements select {
+	width: 280px;
+	height: 30px;
+	padding: 5px;
+	border: 2px solid #d3d3d3;
+	border-radius: 5px;
+}
+
+.studentform_elements1 {
+	display: inline-block;
+	width: 100px;
+	margin: 0 5px;
+}
+
+.narrowdown_buttom{
+    background: #4169e1;
+    color:#ffffff;
+    padding: 10px;
+    border:solid #4169e1;
+    border-radius: 5px;
+}
+
+
+.none_message {
+	text-align: center;
+	color: red;
+}
+
+.student_list {
+    border-collapse:  collapse; /* セルの線を重ねる */
+    width: 100%;
+    text-align: center;
+    border: solid 1px; 
+}
+
+.student_list td {
+    padding: 7px 15px;          /* 余白指定 */
+    border-bottom: solid 1px; 
+}
+
+.student_list th {
+	background-color:  #DDE8EE;    /* 背景色指定 */
+    padding: 5px 10px;          /* 余白指定 */
+    border-bottom: solid 1px; 
+}
+
+
+.number_of_data {
+	text-align: left;
+	padding-left: 20px;
+	margin-bottom: 5px;
 }
 
 
