--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -146,9 +146,9 @@ header h1 {
     text-align: center;
 }
 
-/*#element p {*/
-/*    text-align: center;*/
-/*}*/
+#element p {
+    text-align: center;
+}
 
 
 #side {
