--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -207,13 +207,15 @@ header h1 {
     color: #fff;
 }
 
-/*学生一覧用のCSS*/
-/*学生一覧テーブル用(studentinfomation.jsp)*/
+/*全機能ページのタイトル用*/
 .function_title {
 	 background: #dcdcdc;
 	 color:#000;
 	 padding: 10px 0 10px 10px;
 }
+
+/*学生一覧用のCSS*/
+/*学生一覧テーブル用(studentinfomation.jsp)*/
 .registration_link {
 	float: right;
 	margin-right: 25px;
