--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -469,14 +469,14 @@ button[type="submit"] {
 	height:38px;
 }
 
-.select_button_gtj{
+/*.select_button_gtj
   width: 10%;
   padding: 10px;
   background-color: rgb(206, 206, 206);
   color: rgb(255, 255, 255);
   border: none;
   border-radius: 3px;
-}
+}*/
 .select_label_line{
 	width:960px;
 	height:43px;
