--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -550,58 +550,15 @@ button[type="submit"] {
 }
 
 /*ドロップダウンメニュー*/
-.gnavi__wrap {
-    width: 1200px;
-    margin: 0 auto;
-}
-.gnavi__lists {
-    display: flex;
-}
-.gnavi__list {
-    width: 20%;
-    height: 60px;
-    background-color: #E5F0F8;
-    position: relative;
-    transition: all .3s;
-}
-.gnavi__list:hover {
-    background-color: #0071BB;
-}
-.gnavi__list:not(:first-child)::before {
-    content: "";
-    width: 1px;
-    height: 100%;
-    background-color: #fff;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: all .3s;
-}
-.gnavi__list:hover::before {
-    background-color: #0071BB;
-}
-.gnavi__list a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    color: #1b4059;
-    font-size: 15px;
-    letter-spacing: 0.05em;
-    font-weight: 600;
-    transition: all .3s;
-}
-.gnavi__list:hover a {
-    color: #fff;
-}
 .dropdown__lists {
     display: none;/*デフォルトでは非表示の状態にしておく*/
     width: 100%;
     position: absolute;
     top: 60px;
     left: 0;
+    list-style:none;
+    padding: 0px;
+    margin: 0px;
 }
 .gnavi__list:hover .dropdown__lists {
     display: block;/*Gナビメニューにホバーしたら表示*/
@@ -611,6 +568,7 @@ button[type="submit"] {
     height: 60px;
     transition: all .3s;
     position: relative;
+    list-style:none;
 }
 .dropdown__list:not(:first-child)::before{
     content: "";
@@ -644,4 +602,53 @@ button[type="submit"] {
     right: 15px;
     top: calc(50% - 5px);
 }
+.gnavi__wrap {
+    width: 1200px;
+    margin: 0 auto;
+}
+.gnavi__lists {
+    display: flex;
+}
+.gnavi__list {
+    width: 16%;
+    height: 60px;
+    background-color: #E5F0F8;
+    position: relative;
+    transition: all .3s;
+    list-style:none;
+    text-align: center;
+}
+.gnavi__list:hover {
+    background-color: #0071BB;
+}
+.gnavi__list:not(:first-child)::before {
+    content: "";
+    width: 1px;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .3s;
+}
+.gnavi__list:hover::before {
+    background-color: #0071BB;
+}
+.gnavi__list a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: #1b4059;
+    font-size: 15px;
+    letter-spacing: 0.05em;
+    font-weight: 600;
+    transition: all .3s;
+}
+.gnavi__list:hover a {
+    color: #fff;
+}
+
 
