--- a/src/main/webapp/css/style2.css
+++ b/src/main/webapp/css/style2.css
@@ -4,7 +4,6 @@
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	z-index: 999;
 	background: #fff;
 	z-index: 9999999;
 	text-align:center;
@@ -12,6 +11,7 @@
 }
 
 #splash-logo {
+	font-size: 80px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
