統計機能のCSS

--- a/src/main/webapp/css/style2.css
+++ b/src/main/webapp/css/style2.css
@@ -6,6 +6,64 @@
 	src: url("../font/Corporate-Logo-Bold-ver3.otf");
 }
 
+/*統計情報のぺ―ジのCSS*/
+.statistics_subject {
+	font-size: 50px;
+	text-align: center;
+	margin:20px auto 30px auto;
+	font-family: serif;
+}
+
+.statistics_area{
+	margin:10px auto;
+	width: 930px;
+}
+
+.statistics_area .excellent_grades_list {
+	text-align: center;
+	font-size: 50px;
+	margin:30px 0 0 0;
+	font-family: serif;
+}
+
+.point_contests {
+	display: inline-block;
+	width:300px;
+}
+
+.point_contests h1 {
+	width:150px;
+	text-align: center;
+	margin:10px auto 0 auto;
+	font-family: serif;
+	border-bottom:solid 1px #000;
+}
+
+.point_contests .statistics_points {
+	text-align: center;
+	font-size: 80px;
+	margin:0 5px;
+}
+
+.excellent_grades {
+	display: inline-block;
+	width:300px;
+	border:solid 1px #333;
+	border-radius: 5px;
+}
+
+.excellent_grades .excellent_grades_tags {
+	width: 80px;
+	margin:10px auto;
+	text-align: center;
+	font-size: 15px;
+	border-bottom:solid 1px #000;
+}
+
+.excellent_grades .excellent_grades_data {
+	text-align: center;
+	font-size: 20px;
+}
 
 /*========= ローディング画面のためのCSS ===============*/
 #splash {
