--- a/src/main/webapp/css/style2.css
+++ b/src/main/webapp/css/style2.css
@@ -123,7 +123,7 @@
 }
 
 .mypage_function_contests_top {
-	margin:10px auto;
+	margin:10px 0 0 10px;
 }
 .mypage_function_contests_top .mypage_function_explanation {
 	margin:5px auto 5px 10px;
