--- a/src/main/webapp/css/style2.css
+++ b/src/main/webapp/css/style2.css
@@ -203,7 +203,7 @@
 	font-size: 80px;
 }
 
-/*========= 画面遷移のためのCSS ===============*/
+/*========= 画面遷移のためのCSS(右から左用) ===============*/
 
 /*画面遷移アニメーション*/
 .splashbg{
@@ -246,6 +246,8 @@ body.appear .splashbg{
 		transform:scaleX(0);
 	}
 }
+
+
 
 /*画面遷移の後現れるコンテンツ設定*/
 
