細かい修正

--- a/src/main/webapp/css/style2.css
+++ b/src/main/webapp/css/style2.css
@@ -77,7 +77,6 @@
 .mypage_main {
 	width:350px;
 	float:left;
-	border-right: solid 1px #333;
 }
 
 .mypage_main_contents {
@@ -114,7 +113,8 @@
 .mypage_function {
 	width: 610px;
 	float: right;
-	margin: 0 0 0 10px;
+	padding-left: 10px;
+	border-left: solid 1px #333;
 }
 
 .mypage_function_contests_title {
@@ -172,6 +172,10 @@
 .mypage_function_contests .function_urls a {
 	margin: 0 0 0 10px;
 	font-size: 19px;
+}
+.exception_function {
+	font-size: 9px;
+	color: aqua;
 }
 
 /*ログイン時のアニメーション用のCSS達*/
