--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -966,6 +966,7 @@ button[type="submit"] {
 	background-color: #b0c4de;
 	font-size: 20px;
 	padding-left: 15px;
+	margin:5px 0 5px;
 }
 
 .home_mypage_image{
